test/end-to-end/parse-errors/type-mut.crow
main void()
	a nat mut = 0
